# ex4_reversi

./: CMakeLists.txt  configuration_file  info.txt  makefile
exe/: client.out  client_configuration.ini  server.out  server_configuration.ini
gtest_src/googletest-release-1.8.0/googletest/scripts/: upload.py
include/: AIPlayer.h  Board.h  ConfigParser.h  ConsolePrinter.h  OnlinePlayer.h  Position.h  Printer.h  ReversiGame.h
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/: AIPlayer.cpp  Board.cpp  ClassicLogic.cpp  ConfigParser.cpp  ConfigParser.h  ConsolePrinter.cpp  HumanPlayer.cpp  Logic.cpp  OnlinePlayer.cpp  Player.cpp  Position.cpp  ReversiGame.cpp  main.cpp
src/client/gtest_src/googletest-release-1.8.0/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-matchers.h
src/client/gtest_src/googletest-release-1.8.0/googlemock/include/gmock/internal/: gmock-internal-utils.h
src/client/gtest_src/googletest-release-1.8.0/googlemock/scripts/: fuse_gmock_files.py  gmock_doctor.py  upload.py
src/client/gtest_src/googletest-release-1.8.0/googlemock/test/: gmock-actions_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock_output_test.py  gmock_test_utils.py
src/client/gtest_src/googletest-release-1.8.0/googletest/include/gtest/: gtest-printers.h  gtest.h
src/client/gtest_src/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util-generated.h  gtest-port.h
src/client/gtest_src/googletest-release-1.8.0/googletest/scripts/: upload.py
src/client/gtest_src/googletest-release-1.8.0/googletest/src/: gtest.cc
src/client/gtest_src/googletest-release-1.8.0/googletest/test/: gtest-filepath_test.cc  gtest-param-test_test.cc  gtest-printers_test.cc  gtest_catch_exceptions_test_.cc
src/client/include/: AIPlayer.h  Board.h  ClassicLogic.h  ConfigParser.h  ConsolePrinter.h  HumanPlayer.h  Logic.h  OnlinePlayer.h  Player.h  PlayerColor.h  Position.h  Printer.h  ReversiGame.h
src/client/src/: AIPlayer.cpp  Board.cpp  ClassicLogic.cpp  ConfigParser.cpp  ConsolePrinter.cpp  HumanPlayer.cpp  Logic.cpp  OnlinePlayer.cpp  Player.cpp  Position.cpp  ReversiGame.cpp  main.cpp
src/client/test/: AIPlayerTest.cpp  BoardStates.h  BoardTest.cpp  ClassicLogicTest.cpp  main.cpp
src/server/: Server.cpp  Server.h  main.cpp  makefile
test/: AIPlayerTest.cpp  BoardStates.h  ClassicLogicTest.cpp
